--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <div class="outline"></div>
+    <div class="circle"></div>
     <h1>NEET 2022</h1>
 
     <div id="countdown">
