fixed resposivity for all screens

--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown Timer</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="outline"></div>
     <div class="circle"></div>
     <h1>NEET 2022</h1>
 
     <div id="countdown">
-        <div id='tiles'></div>
-        <div class="labels">
-            <li>Days</li>
-            <li>Hours</li>
-            <li>Mins</li>
-            <li>Secs</li>
-        </div>
+      <div id="tiles"></div>
+      <div class="labels">
+        <li>Days</li>
+        <li>Hours</li>
+        <li>Mins</li>
+        <li>Secs</li>
+      </div>
     </div>
-</body>
-
-</html> 
+  </body>
+</html>
+ 
