Heading alignment issue Resolved

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
 
   <body>
-    <div class="outline"></div>
-    <div class="circle"></div>
-    <h1>NEET 2022</h1>
+    <div class="heading-title">
+      <div class="outline"></div>
+      <div class="circle"></div>
+      <h1>NEET 2022</h1>
+    </div>
 
     <div id="countdown">
       <div id="tiles"></div>
