Custom Time Input From User Added

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
   </head>
 
   <body>
+    
     <div class="heading-title">
       <div class="outline"></div>
       <div class="circle"></div>
-      <h1>NEET 2022</h1>
+      <h1>CountDown Setter</h1>
     </div>
-
+    <div class="take-date">
+      <form>
+      <label class="Countdown-date" for="countdown">Choose Date : </label>
+      <input class="Countdown-date" id="date-c" type="date">
+      </form>
+    </div>
     <div id="countdown">
       <div id="tiles"></div>
       <div class="labels">
