--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -16,30 +16,30 @@
   </div>
 
   <div class="cards-container">
-    <div class="card-container">
-      <div class="card">
+    <div class="card bg-1">
+      <div class="card-content">
         <h3>Title</h3>
-        <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias voluptatem
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias voluptatem
           laboriosam esse, deserunt eaque est fugiat vitae itaque unde aut quasi soluta quod a perferendis voluptatibus,
           rerum reiciendis quam.</div>
+          <a href="#" class="goto-btn">Open</a>
       </div>
-      <a href="#">Open</a>
     </div>
-    <div class="card-container">
-      <div class="card">
+    <div class="card bg-2">
+      <div class="card-content">
         <h3>Title</h3>
-        <div class="card-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias voluptatem
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. At molestias voluptatem
           laboriosam esse, deserunt eaque est fugiat vitae itaque unde aut quasi soluta quod a perferendis voluptatibus,
           rerum reiciendis quam.</div>
+          <a href="#" class="goto-btn">Open</a>
       </div>
-      <a href="#">Open</a>
     </div>
-    <div class="card-container">
-      <div class="card">
+    <div class="card bg-3">
+      <div class="card-content">
         <h3>Countdown Timer</h3>
-        <div class="card-content">A simple web app for setting up a Countdown from right now to a specific date</div>
+        <div>A simple web app for setting up a Countdown from right now to a specific date</div>
+        <a href="components/CountdownTimer.html" class="goto-btn">Open</a>
       </div>
-      <a href="components/CountdownTimer.html">Open</a>
     </div>
 
   </div>
