--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
       </div>
     </div>
 
+    <div class="footer">
+      <h3 >Countdown Timer</h3>
+  
+      <h4 href="#">Home</h4>
+      <h4 href="#">About us</h4>
+      <div class="social-media">
+        <h4>Follow us</h4>
+        <i class="fa fa-brands fa-facebook fa-2x facebook" ></i>
+        <i class="fa fa-brands fa-instagram fa-2x instagram"></i>
+        <i class="fa fa-brands fa-twitter fa-2x twitter"></i>
+      </div>
+    </div>
+  
+
     <script>
       let slideIndex = 0;
       const showSlides = async () => {
