--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <li class="item has-submenu">
           <a tabindex="0">Plans</a>
           <ul class="submenu">
-            <li class="subitem"><a href="#">Freelancer</a></li>
-            <li class="subitem"><a href="#">Startup</a></li>
-            <li class="subitem"><a href="#">Enterprise</a></li>
+            <li class="subitem"><a href="#">Timer app</a></li>
+            <li class="subitem"><a href="#">Todo Manager</a></li>
+            <li class="subitem"><a href="#">Music Player</a></li>
           </ul>
         </li>
         <li class="item"><a href="#">Blog</a></li>
@@ -88,14 +88,11 @@
       </div>
       <div class="card bg-2">
         <div class="card-content">
-          <h3>Title</h3>
+          <h3>Todo Manager/h3>
           <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-            molestias voluptatem laboriosam esse, deserunt eaque est fugiat
-            vitae itaque unde aut quasi soluta quod a perferendis voluptatibus,
-            rerum reiciendis quam.
+            Procrastination is opportunity's natural assassin . So use the todo app to set targets 
           </div>
-          <a href="#" class="goto-btn">Open</a>
+          <a href="/to-doLISt/index.html" class="goto-btn">Open</a>
         </div>
       </div>
       <div class="card bg-3">
