--- a/index.html
+++ b/index.html
@@ -24,18 +24,17 @@
         <li class="item has-submenu">
           <a tabindex="0">Services</a>
           <ul class="submenu">
-            <li class="subitem"><a href="#">Design</a></li>
-            <li class="subitem"><a href="#">Development</a></li>
-            <li class="subitem"><a href="#">SEO</a></li>
-            <li class="subitem"><a href="#">Copywriting</a></li>
+            <li class="subitem"><a href="#">Timer app</a></li>
+            <li class="subitem"><a href="#">Todo Manager</a></li>
+            <li class="subitem"><a href="#">Music Player</a></li>
           </ul>
         </li>
         <li class="item has-submenu">
           <a tabindex="0">Plans</a>
           <ul class="submenu">
-            <li class="subitem"><a href="#">Timer app</a></li>
-            <li class="subitem"><a href="#">Todo Manager</a></li>
-            <li class="subitem"><a href="#">Music Player</a></li>
+            <li class="subitem"><a href="#">Freelancer</a></li>
+            <li class="subitem"><a href="#">Startup</a></li>
+            <li class="subitem"><a href="#">Enterprise</a></li>
           </ul>
         </li>
         <li class="item"><a href="#">Blog</a></li>
@@ -53,11 +52,6 @@
       </ul>
       
 
-        <li class="item button secondary"><a href="#">Sign Up</a></li>
-        <li class="toggle">
-          <a href="#"><i class="fas fa-bars"></i></a>
-        </li>
-      </ul>
 
     </nav>
     <div class="carousel">
@@ -88,7 +82,7 @@
       </div>
       <div class="card bg-2">
         <div class="card-content">
-          <h3>Todo Manager/h3>
+          <h3>Todo Manager</h3>
           <div>
             Procrastination is opportunity's natural assassin . So use the todo app to set targets 
           </div>
