--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       </div>
       <div class="card bg-2">
         <div class="card-content">
-          <h3>Todo Manager</h3>
+          <h3> Todo Manager</h3>
           <div>
-            Procrastination is opportunity's natural assassin . So use the todo app to set targets 
+            Procrastination is opportunity's natural assassin
           </div>
-          <a href="/to-doLISt/index.html" class="goto-btn">Open</a>
+          <a href="to-doLISt/index.html" class="goto-btn">Open</a>
         </div>
       </div>
       <div class="card bg-3">
