fix: fixed broken links and styling issues

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <li class="item"><a href="#">Home</a></li>
         <li class="item"><a href="#">About</a></li>
         <li class="item has-submenu">
-          <a tabindex="0">Services</a>
+          <a class="submenu-title" tabindex="0">Services</a>
           <ul class="submenu">
-            <li class="subitem"><a href="#">Timer app</a></li>
-            <li class="subitem"><a href="#">Todo Manager</a></li>
+            <li class="subitem"><a href="./components/CountdownTimer.html">Timer app</a></li>
+            <li class="subitem"><a href="./to-doLISt/index.html">Todo Manager</a></li>
             <li class="subitem"><a href="#">Music Player</a></li>
           </ul>
         </li>
         <li class="item has-submenu">
-          <a tabindex="0">Plans</a>
+          <a class="submenu-title" tabindex="0">Plans</a>
           <ul class="submenu">
             <li class="subitem"><a href="#">Freelancer</a></li>
             <li class="subitem"><a href="#">Startup</a></li>
