Updated the navbar and added some styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
     <nav id="navbar">
 
       <ul class="menu">
-        <li class="logo"><a href="#">LOGO</a></li>
+        
+        <li class="logo"><div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="./favicon_io/android-chrome-192x192.png" alt="Logo" width="30" height="24"
+              class="d-inline-block align-text-top">
+            Countdown timer
+          </a>
+        </div></li>
         <li class="item"><a href="#">Home</a></li>
         <li class="item"><a href="#">About</a></li>
         <li class="item has-submenu">
