placed logo in navbar

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
   <nav id="navbar">
     <ul class="menu">
-      <li class="logo"><a href="#">LOGO</a></li>
+      <li class="logo"><img src="Countdown.png" alt="" height="80px" width="80px" style="border-radius: 50px;"></li>
       <li class="item"><a href="#">Home</a></li>
       <li class="item"><a href="#">About</a></li>
       <li class="item has-submenu">
