--- a/index.html
+++ b/index.html
@@ -74,12 +74,9 @@
     <div class="cards-container">
       <div class="card bg-1">
         <div class="card-content">
-          <h3>Title</h3>
+          <h3>Quotes Generator</h3>
           <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-            molestias voluptatem laboriosam esse, deserunt eaque est fugiat
-            vitae itaque unde aut quasi soluta quod a perferendis voluptatibus,
-            rerum reiciendis quam.
+           New quotes are generated as soon as you click the button.
           </div>
           <a href="#" class="goto-btn">Open</a>
         </div>
