Completion of initial version of whole music instrumnents sound web page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="submenu">
           <li class="subitem"><a href="./components/CountdownTimer.html">Timer app</a></li>
           <li class="subitem"><a href="./to-doLISt/index.html">Todo Manager</a></li>
-          <li class="subitem"><a href="#">Music Player</a></li>
+          <li class="subitem"><a href="/Pages/Musicapp">Music Player</a></li>
         </ul>
       </li>
       <li class="item has-submenu">
@@ -61,9 +61,9 @@
   <div class="cards-container">
     <div class="card bg-1">
       <div class="card-content">
-        <h3>Music App</h3>
+        <h3>Music Instruments App</h3>
         <div>
-          This is the best Instrument Sound app which will make this app unique from other apps.
+          This is the best Music Instruments Sound app which will make this app unique from other apps.
         </div>
         <a href="pages/Musicapp/index.html" class="goto-btn">Open</a>
       </div>
