--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
       <div class="links">
       <li class="item"><a href="#">Home</a></li>
-      <li class="item"><a href="#">About</a></li>
+      <li class="item"><a href="./about.html">About</a></li>
       <li class="item has-submenu">
         <a class="submenu-title" tabindex="0">Services</a>
         <ul class="submenu">
@@ -243,7 +243,7 @@
       <ul class="list-inline">
         <li class="list-inline-item"><a href="#">Home</a></li>
         <li class="list-inline-item"><a href="#">Services</a></li>
-        <li class="list-inline-item"><a href="#">About</a></li>
+        <li class="list-inline-item"><a href="./about.html">About</a></li>
         <li class="list-inline-item"><a href="#">Terms</a></li>
         <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
       </ul>
