--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div>
           This is the best Music Instruments Sound app which will make this app unique from other apps.
         </div>
-        <a href="pages/Musicapp/index.html" class="goto-btn">Open</a>
+        <a href="Pages/Musicapp/index.html" class="goto-btn">Open</a>
       </div>
     </div>
     <div class="card bg-2">
