--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png" />
@@ -79,86 +79,95 @@
       margin-bottom: 0;
     }
 
-    .heading{
+    .heading {
       display: block;
       justify-content: center;
       position: relative;
       left: 20vw;
-    }  
-
-    .contents{
-        display: block;
-        justify-content: center;
-        position: relative;
-        left: 20vw;
-        margin-right: 50vw;
     }
-    .linkhome{
-        text-decoration: none;
-        color: black;
+
+    .contents {
+      display: block;
+      justify-content: center;
+      position: relative;
+      left: 20vw;
+      margin-right: 50vw;
+    }
+
+    .linkhome {
+      text-decoration: none;
+      color: black;
     }
   </style>
 </head>
+
 <body>
   <nav id="navbar">
     <ul class="menu">
       <div>
-      <li class="logo"><img src="Countdown.png" alt="Logo" height="80px" width="80px" style="border-radius: 50px;"></li>
+        <li class="logo"><img src="Countdown.png" alt="Logo" height="80px" width="80px" style="border-radius: 50px;">
+        </li>
       </div>
       <div class="links">
-      <li class="item"><a href="#">Home</a></li>
-      <li class="item"><a href="./about.html">About</a></li>
-      <li class="item has-submenu">
-        <a class="submenu-title" tabindex="0">Services</a>
-        <ul class="submenu">
-          <li class="subitem">
-            <a href="./components/CountdownTimer.html">Timer app</a>
-          </li>
-          <li class="subitem">
-            <a href="./to-doLISt/index.html">Todo Manager</a>
-          </li>
-          <li class="subitem"><a href="#">Music Player</a></li>
-        </ul>
-      </li>
-      <li class="item has-submenu">
-        <a class="submenu-title" tabindex="0">Plans</a>
-        <ul class="submenu">
-          <li class="subitem"><a href="#">Freelancer</a></li>
-          <li class="subitem"><a href="#">Startup</a></li>
-          <li class="subitem"><a href="#">Enterprise</a></li>
-        </ul>
-      </li>
-      <li class="item"><a href="#">Blog</a></li>
-      <li class="item"><a href="#">Contact</a></li>
-      <li class="item button button1"><a href="#">Log In</a></li>
-    </div>
-    <div>
-      <li class="item searched d-flex my-2">
-        <input type="search" placeholder="Search" id="form1" class="form-control" />
-        <button type="button" class="btn btn-primary mx-1">
-          <i class="fas fa-search"></i>
-        </button>
-      </li>
-      <li class="toggle">
-        <a href="#"><i class="fas fa-bars"></i></a>
-      </li>
-    </div>
+        <li class="item"><a href="index.html">Home</a></li>
+        <li class="item"><a href="./about.html">About</a></li>
+        <li class="item has-submenu">
+          <a class="submenu-title" tabindex="0">Services</a>
+          <ul class="submenu">
+            <li class="subitem">
+              <a href="./components/CountdownTimer.html">Timer app</a>
+            </li>
+            <li class="subitem">
+              <a href="./to-doLISt/index.html">Todo Manager</a>
+            </li>
+            <li class="subitem"><a href="#">Music Player</a></li>
+          </ul>
+        </li>
+        <li class="item has-submenu">
+          <a class="submenu-title" tabindex="0">Plans</a>
+          <ul class="submenu">
+            <li class="subitem"><a href="#">Freelancer</a></li>
+            <li class="subitem"><a href="#">Startup</a></li>
+            <li class="subitem"><a href="#">Enterprise</a></li>
+          </ul>
+        </li>
+        <li class="item"><a href="#">Blog</a></li>
+        <li class="item"><a href="#">Contact</a></li>
+        <li class="item button button1"><a href="/LOGIN/LogIn.html">Log In</a></li>
+      </div>
+      <div>
+        <li class="item searched d-flex my-2">
+          <input type="search" placeholder="Search" id="form1" class="form-control" />
+          <button type="button" class="btn btn-primary mx-1">
+            <i class="fas fa-search"></i>
+          </button>
+        </li>
+        <li class="toggle">
+          <a href="#"><i class="fas fa-bars"></i></a>
+        </li>
+      </div>
     </ul>
   </nav>
   <div class="about-us">
     <h1 class="heading">About Us</h1>
     <br>
     <p class="contents">Countdown Timer is a website that manages your time in the most efficient yet sophisticated way.
-            It offers various apps to do the same, like for example, timer manager app, to do app.
-            It takes a lot of care that you finish your work in time, and not miss out assignments due to paucity of time.
-            Time management plays a significant role in everyone's life from big celebrities to normal laymen.
-            Appointments, and late night assignments define a student's life in general. Procrastination is the favourite word, you can not do without.
-            Last minute preparations are like the fairy Godmothers at the end.<br/> But halt there, <i>Countdown Timer </i> 
-            has harbingered to get you rid of all such troubles, and worries. We promise you timer calls to wake up early, get to work, and reminder warnings to stop you from missing assignments, as well as appointments.
-            List down your favourites, or even your daily chores, and cross out when the work gets done. Thereby the website won't allow you to miss out anything precious!
-            Stay in top of the corporate ladder with our website, which we have customized in such a way to fit both timers as well as to do lists in place just juxtaposed against each other.
-            We also offer other services like startup, enterprises and freelancing plans. Our blogs may help your come across information which interests you.
-            What are you waiting for then? Just open up the <a href="./index.html" class="linkhome"><small>Home</small></a> page and get access to awesome content!
+      It offers various apps to do the same, like for example, timer manager app, to do app.
+      It takes a lot of care that you finish your work in time, and not miss out assignments due to paucity of time.
+      Time management plays a significant role in everyone's life from big celebrities to normal laymen.
+      Appointments, and late night assignments define a student's life in general. Procrastination is the favourite
+      word, you can not do without.
+      Last minute preparations are like the fairy Godmothers at the end.<br /> But halt there, <i>Countdown Timer </i>
+      has harbingered to get you rid of all such troubles, and worries. We promise you timer calls to wake up early, get
+      to work, and reminder warnings to stop you from missing assignments, as well as appointments.
+      List down your favourites, or even your daily chores, and cross out when the work gets done. Thereby the website
+      won't allow you to miss out anything precious!
+      Stay in top of the corporate ladder with our website, which we have customized in such a way to fit both timers as
+      well as to do lists in place just juxtaposed against each other.
+      We also offer other services like startup, enterprises and freelancing plans. Our blogs may help your come across
+      information which interests you.
+      What are you waiting for then? Just open up the <a href="./index.html" class="linkhome"><small>Home</small></a>
+      page and get access to awesome content!
 
 
 
@@ -291,4 +300,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
