--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png" />
@@ -94,7 +94,7 @@
         </li>
       </div>
       <div class="links">
-        <li class="item"><a href="#">Home</a></li>
+        <li class="item"><a href="index.html">Home</a></li>
         <li class="item"><a href="./about.html">About</a></li>
         <li class="item has-submenu">
           <a class="submenu-title" tabindex="0">Services</a>
@@ -118,7 +118,7 @@
         </li>
         <li class="item"><a href="#">Blog</a></li>
         <li class="item"><a href="#">Contact</a></li>
-        <li class="item button button1"><a href="#">Log In</a></li>
+        <li class="item button button1"><a href="LOGIN/LogIn.html">Log In</a></li>
       </div>
       <div>
         <li class="item searched d-flex my-2">
