Added Sticky Navbar Feature

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 
 <body>
-  <nav id="navbar">
+  <nav id="navbar" class="sticky">
     <ul class="menu">
       <div>
         <li class="logo"><img src="Countdown.png" alt="Logo" height="80px" width="80px" style="border-radius: 50px;">
