created contact page

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </ul>
         </li>
         <li class="item"><a href="#">Blog</a></li>
-        <li class="item"><a href="#">Contact</a></li>
+        <li class="item"><a href="./contact.html">Contact</a></li>
 
         <li class="item button button1"><a href="LOGIN/LogIn.html">Log In</a></li>
 
