--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,9 @@
   <title>Homepage</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png" />
@@ -17,7 +18,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
+  <link rel="stylesheet" href="contact.css">
   <style>
     .footer-basic {
       padding: 40px 0;
@@ -78,116 +79,115 @@
       color: #aaa;
       margin-bottom: 0;
     }
-
-    .heading {
-      display: block;
-      justify-content: center;
-      position: relative;
-      left: 20vw;
-    }
-
-    .contents {
-      display: block;
-      justify-content: center;
-      position: relative;
-      left: 20vw;
-      margin-right: 50vw;
-    }
-
-    .linkhome {
-      text-decoration: none;
-      color: black;
-    }
   </style>
 </head>
-
-<body>
+<>
   <nav id="navbar">
     <ul class="menu">
       <div>
-        <li class="logo"><img src="Countdown.png" alt="Logo" height="80px" width="80px" style="border-radius: 50px;">
-        </li>
+      <li class="logo"><img src="Countdown.png" alt="Logo" height="80px" width="80px" style="border-radius: 50px;"></li>
       </div>
       <div class="links">
-        <li class="item"><a href="index.html">Home</a></li>
-        <li class="item"><a href="./about.html">About</a></li>
-        <li class="item has-submenu">
-          <a class="submenu-title" tabindex="0">Services</a>
-          <ul class="submenu">
-            <li class="subitem">
-              <a href="./components/CountdownTimer.html">Timer app</a>
-            </li>
-            <li class="subitem">
-              <a href="./to-doLISt/index.html">Todo Manager</a>
-            </li>
-            <li class="subitem"><a href="#">Music Player</a></li>
-          </ul>
-        </li>
-        <li class="item has-submenu">
-          <a class="submenu-title" tabindex="0">Plans</a>
-          <ul class="submenu">
-            <li class="subitem"><a href="#">Freelancer</a></li>
-            <li class="subitem"><a href="#">Startup</a></li>
-            <li class="subitem"><a href="#">Enterprise</a></li>
-          </ul>
-        </li>
-        <li class="item"><a href="#">Blog</a></li>
-        <li class="item"><a href="./contact.html">Contact</a></li>
-        <li class="item button button1"><a href="/LOGIN/LogIn.html">Log In</a></li>
-      </div>
-      <div>
-        <li class="item searched d-flex my-2">
-          <input type="search" placeholder="Search" id="form1" class="form-control" />
-          <button type="button" class="btn btn-primary mx-1">
-            <i class="fas fa-search"></i>
-          </button>
-        </li>
-        <li class="toggle">
-          <a href="#"><i class="fas fa-bars"></i></a>
-        </li>
-      </div>
+      <li class="item"><a href="#">Home</a></li>
+      <li class="item"><a href="./about.html">About</a></li>
+      <li class="item has-submenu">
+        <a class="submenu-title" tabindex="0">Services</a>
+        <ul class="submenu">
+          <li class="subitem">
+            <a href="./components/CountdownTimer.html">Timer app</a>
+          </li>
+          <li class="subitem">
+            <a href="./to-doLISt/index.html">Todo Manager</a>
+          </li>
+          <li class="subitem"><a href="#">Music Player</a></li>
+        </ul>
+      </li>
+      <li class="item has-submenu">
+        <a class="submenu-title" tabindex="0">Plans</a>
+        <ul class="submenu">
+          <li class="subitem"><a href="#">Freelancer</a></li>
+          <li class="subitem"><a href="#">Startup</a></li>
+          <li class="subitem"><a href="#">Enterprise</a></li>
+        </ul>
+      </li>
+      <li class="item"><a href="#">Blog</a></li>
+      <li class="item"><a href="./contact.html">Contact</a></li>
+      <li class="item button button1"><a href="#">Log In</a></li>
+    </div>
+    <div>
+      <li class="item searched d-flex my-2">
+        <input type="search" placeholder="Search" id="form1" class="form-control" />
+        <button type="button" class="btn btn-primary mx-1">
+          <i class="fas fa-search"></i>
+        </button>
+      </li>
+      <li class="toggle">
+        <a href="#"><i class="fas fa-bars"></i></a>
+      </li>
+    </div>
     </ul>
   </nav>
-  <div class="about-us">
-    <h1 class="heading">About Us</h1>
-    <br>
-    <p class="contents">Countdown Timer is a website that manages your time in the most efficient yet sophisticated way.
-      It offers various apps to do the same, like for example, timer manager app, to do app.
-      It takes a lot of care that you finish your work in time, and not miss out assignments due to paucity of time.
-      Time management plays a significant role in everyone's life from big celebrities to normal laymen.
-      Appointments, and late night assignments define a student's life in general. Procrastination is the favourite
-      word, you can not do without.
-      Last minute preparations are like the fairy Godmothers at the end.<br /> But halt there, <i>Countdown Timer </i>
-      has harbingered to get you rid of all such troubles, and worries. We promise you timer calls to wake up early, get
-      to work, and reminder warnings to stop you from missing assignments, as well as appointments.
-      List down your favourites, or even your daily chores, and cross out when the work gets done. Thereby the website
-      won't allow you to miss out anything precious!
-      Stay in top of the corporate ladder with our website, which we have customized in such a way to fit both timers as
-      well as to do lists in place just juxtaposed against each other.
-      We also offer other services like startup, enterprises and freelancing plans. Our blogs may help your come across
-      information which interests you.
-      What are you waiting for then? Just open up the <a href="./index.html" class="linkhome"><small>Home</small></a>
-      page and get access to awesome content!
-
-
-
-    </p>
-  </div>
-  <div class="carousel">
+  <!-- <div class="carousel">
     <img src="https://source.unsplash.com/1600x900/?quote" alt="quote" class="slide active fade" />
     <img src="https://source.unsplash.com/1600x900/?quote" alt="quote" class="slide fade" />
-  </div>
+  </div> -->
+  <section>
+    <br>
+    <div class="contact-information">
+        <div class="form-information">
+          <h3>Contact Us</h3>
+          <form action="" class="contact-form">
+            <input type="text" placeholder="Enter your name" required>
+            <input type="email" placeholder="Enter your email address" required>
+            <textarea id="subject" cols="1" rows="1" placeholder="Write the subject here" required></textarea>
+            <textarea name="" id="message" cols="30" rows="10" placeholder="Write message here" required></textarea>
+            <input type="submit" value="Send" class="send-btn">
+          </form>
+        </div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721951.884270322!2d85.60622378740801!3d24.356291838840118!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fa16ff1397e887%3A0x71543a3dc3e7a20a!2sWest%20Bengal!5e0!3m2!1sen!2sin!4v1665319259589!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+    <div class="address">
+        <br>
+        <ul class="details">
+            <li>
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+            </li>
+            <li>
+                <i class="fa fa-link" aria-hidden="true"></i>
+            </li>
+            <li>
+                <i class="fa fa-phone" aria-hidden="true"></i>
+            </li>
+            <li>
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+            </li>
+        </ul>
+        <ul class="details">
+            <li>
+                Address: 97, Park Street, Kolkata, West Bengal - 700021.
+            </li>
+            <li>
+                Website: abcefghd.com
+            </li>
+            <li>
+                Phone: 0987654321
+            </li>
+            <li>
+                Email: absfec@gmail.com
+            </li>
+        </ul>
+    </div>
+  </section>
   <div class="cards-container">
     <div class="card bg-1">
       <div class="card-content">
-        <h3>Title</h3>
+        <h3>Music Instruments App</h3>
         <div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. At
-          molestias voluptatem laboriosam esse, deserunt eaque est fugiat
-          vitae itaque unde aut quasi soluta quod a perferendis voluptatibus,
-          rerum reiciendis quam.
+          This is the best Music Instruments Sound app which will make this app unique from other apps.
         </div>
-        <a href="#" class="goto-btn">Open</a>
+        <a href="pages/Musicapp/index.html" class="goto-btn">Open</a>
       </div>
     </div>
     <div class="card bg-2">
@@ -197,6 +197,7 @@
         <a href="to-doLISt/index.html" class="goto-btn">Open</a>
       </div>
     </div>
+
     <div class="card bg-3">
       <div class="card-content">
         <h3>Countdown Timer</h3>
@@ -208,6 +209,7 @@
       </div>
     </div>
   </div>
+
   <script>
     let slideIndex = 0;
     const showSlides = async () => {
@@ -220,6 +222,7 @@
         url = response.url;
       } catch (error) {
         console.log(error);
+
       }
       slides[slideIndex].classList.toggle("active");
       slideIndex++;
@@ -245,6 +248,7 @@
     /* Event Listener */
     toggle.addEventListener("click", toggleMenu, false);
     const items = document.querySelectorAll(".item");
+
     /* Activate Submenu */
     function toggleItem() {
       if (this.classList.contains("submenu-active")) {
@@ -258,11 +262,13 @@
         this.classList.add("submenu-active");
       }
     }
+
     /* Event Listeners */
     for (let item of items) {
       if (item.querySelector(".submenu")) {
         item.addEventListener("click", toggleItem, false);
         item.addEventListener("keypress", toggleItem, false);
+
       }
     }
     /* Close Submenu From Anywhere */
