--- a/index.html
+++ b/index.html
@@ -145,43 +145,65 @@
     <img src="https://source.unsplash.com/1600x900/?quote" alt="quote" class="slide active fade" />
     <img src="https://source.unsplash.com/1600x900/?quote" alt="quote" class="slide fade" />
   </div>
-  <div class="cards-container">
-    <div class="card bg-1">
-      <div class="card-content">
-        <h3>Music Instruments App</h3>
-        <div>
-          This is the best Music Instruments Sound app which will make this app unique from other apps.
-        </div>
-        <a href="Pages/Musicapp/index.html" class="goto-btn">Open</a>
-      </div>
-    </div>
-    <div class="card bg-2">
-      <div class="card-content">
-        <h3>Todo Manager</h3>
-        <div>Procrastination is opportunity's natural assassin</div>
-        <a href="to-doLISt/index.html" class="goto-btn">Open</a>
-      </div>
-    </div>
-    <div class="card bg-3">
-      <div class="card-content">
-        <h3>Countdown Timer</h3>
-        <div>
-          A simple web app for setting up a Countdown from right now to a
-          specific date
-        </div>
-        <a href="components/CountdownTimer.html" class="goto-btn">Open</a>
-      </div>
-    </div>
-    <div class="card bg-4">
-      <div class="card-content">
-        <h3>lofi-beats</h3>
-        <div>
-          A lofi beats playlist which helps you concentrate and focus.
-        </div>
-        <a href="https://open.spotify.com/playlist/6Q3Qo3XxSj5Cu9pQJlBfzG?si=bb5c790a20f843f3" class="goto-btn">Open</a>
-      </div>
-    </div>
+ 
+  
+  <div class="container20">
 
+    <div class="card1">
+      <div class="face face1">
+        <div class="content">
+          <span class="stars"></span>
+          <h2 class="java">Music Instruments App</h2>
+          <p class="java">This is the best Music Instruments Sound app which will make this app unique from other apps.</p>
+          <a href="Pages/Musicapp/index.html" class="goto-btn">Open</a>
+        </div>
+      </div>
+      <div class="face face2">
+        <h2>Music Instruments App</h2>
+      </div>
+    </div>
+  
+    <div class="card1">
+      <div class="face face1">
+        <div class="content">
+          <span class="stars"></span>
+          <h2 class="python">Todo Manager</h2>
+          <p class="python">Procrastination is opportunity's natural assassin</p>
+          <a href="to-doLISt/index.html" class="goto-btn">Open</a>
+        </div>
+      </div>
+      <div class="face face2">
+        <h2>Todo Manager</h2>
+      </div>
+    </div>
+  
+    <div class="card1">
+      <div class="face face1">
+        <div class="content">
+          <span class="stars"></span>
+          <h2 class="cSharp">Countdown Timer</h2>
+          <p class="cSharp">A simple web app for setting up a Countdown from right now to a
+            specific date</p>
+            <a href="components/CountdownTimer.html" class="goto-btn">Open</a>
+        </div>
+      </div>
+      <div class="face face2">
+        <h2>Countdown Timer</h2>
+      </div>
+    </div>
+    <div class="card1">
+      <div class="face face1">
+        <div class="content">
+          <span class="stars"></span>
+          <h2 class="python">lofi-beats</h2>
+          <p class="python"> A lofi beats playlist which helps you concentrate and focus.</p>
+          <a href="Pages/Musicapp/index.html" class="goto-btn">Open</a>
+        </div>
+      </div>
+      <div class="face face2">
+        <h2>lofi-beats</h2>
+      </div>
+    </div>
   </div>
 
   <script>
