Made changes in MusicApp

--- a/Pages/Musicapp/index.html
+++ b/Pages/Musicapp/index.html
@@ -36,6 +36,9 @@
         <div class="music-card" onclick="instrumentSound('Violin')">
             <img src="./images/violin-33610_640.png" alt="violin" width="250px">
         </div>
+        <div class="music-card" onclick="instrumentSound('Bongo')">
+            <img src="./images/Bongo.jpg" alt="Bongo" width="250px">
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
