--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
+  
   <style>
     .carousel {
       height: 40em;
@@ -122,7 +122,7 @@
             <li class="subitem"><a href="#">Enterprise</a></li>
           </ul>
         </li>
-        <li class="item"><a href="#">Blog</a></li>
+        <li class="item"><a href="./blog.html">Blog</a></li>
         <li class="item"><a href="./contact.html">Contact</a></li>
 
         <li class="item button button1"><a href="LOGIN/LogIn.html">Log In</a></li>
