improved cards contact page

--- a/contact.html
+++ b/contact.html
@@ -79,12 +79,6 @@
       color: #aaa;
       margin-bottom: 0;
     }
-    .contact-card-text{
-      margin-bottom: 1rem;
-    }
-    .card-content-contact{
-      padding: 1rem;
-    }
    
   </style>
 </head>
@@ -246,7 +240,7 @@
     </div>
   </div>
 
-  <script>
+  <script>s
     let slideIndex = 0;
     const showSlides = async () => {
       let slides = document.getElementsByClassName("slide");
