added animated gradient

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 </head>
 
 <body>
+  <video autoplay muted loop id="myVideo">
+    <source src="images/4K_8.mp4" type="video/mp4">
+  </video>
   <nav id="navbar" class="sticky">
     <ul class="menu">
       <div>
