Navbar re-designed and updated

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <nav id="navbar" class="sticky">
     <ul class="menu">
       <div>
-        <li class="logo"><img src="Countdown.png" alt="Logo" height="80px" width="80px" style="border-radius: 50px;">
+        <li class="logo"><img src="Countdown.png" alt="Logo">
         </li>
       </div>
       <div class="links">
