responsive navigation bar

--- a/index.html
+++ b/index.html
@@ -91,48 +91,12 @@
 </head>
 
 <body>
-  <nav id="navbar" class="sticky" style="border: 1px solid red;">
+  <nav id="navbar" class="sticky">
     <div class="logo-containter">
       <img src="Countdown.png" alt="Logo" height="80px" width="80px" style="border-radius: 50px;">
     </div>
 
-    <!-- <ul class="menu">
-      <div class="links">
-
-        <li class="item"><a href="index.html">Home</a></li>
-
-        <li class="item"><a href="./about.html">About</a></li>
-        <li class="item has-submenu">
-          <a class="submenu-title" tabindex="0">Services</a>
-          <ul class="submenu">
-            <li class="subitem">
-              <a href="./components/CountdownTimer.html">Timer app</a>
-            </li>
-            <li class="subitem">
-              <a href="./to-doLISt/index.html">Todo Manager</a>
-            </li>
-            <li class="subitem"><a href="#">Music Player</a></li>
-          </ul>
-        </li>
-        <li class="item has-submenu">
-          <a class="submenu-title" tabindex="0">Plans</a>
-          <ul class="submenu">
-            <li class="subitem"><a href="#">Freelancer</a></li>
-            <li class="subitem"><a href="#">Startup</a></li>
-            <li class="subitem"><a href="#">Enterprise</a></li>
-          </ul>
-        </li>
-        <li class="item"><a href="./blog.html">Blog</a></li>
-        <li class="item"><a href="./contact.html">Contact</a></li>
-
-        <li class="item button button1"><a href="LOGIN/LogIn.html">Log In</a></li>
-
-      </div>
-    
-    </ul> -->
-
-
-    <!--!My menu  -->
+    <!-- navigation items -->
     <ul class="menu">
       <li class="item d-flex">
         <input type="search" placeholder="search" id="form1" class="form-control" />
@@ -151,30 +115,16 @@
       </li>
       <li class="item dropdown">
         <select name="services" id="select-container2">
-          <option value="">Plans</option>
-          <option value="">Freelancer</option>
-          <option value="">Startup</option>
-          <option value="">Enterprise</option>
+          <option value=""><a href="#">Plans</a></option>
+          <option value=""><a href="#">Freelancer</a></option>
+          <option value=""><a href="#">Startup</a></option>
+          <option value=""><a href="#">Enterprise</a></option>
         </select>
       </li>
       <li class="item"><a href="./blog.html">Blog</a></li>
       <li class="item"><a href="./contact.html">Contact</a></li>
       <li class="item button"><a href="LOGIN/LogIn.html">Log In</a></li>  
     </ul>
-
-  
-    <!-- hambuger -->
-    <!-- <div>
-      <li class="item searched d-flex my-2">
-        <input type="search" placeholder="Search" id="form1" class="form-control" />
-        <button type="button" class="btn btn-primary mx-1">
-          <i class="fas fa-search"></i>
-        </button>
-      </li>
-      <li class="toggle">
-        <a href="#"><i class="fas fa-bars"></i></a>
-      </li>
-    </div> -->
 
     <div id="hamburger" class="hamburger">
       <span id="bar"></span>
